@@ -1,11 +1,9 @@
-import java.util.Scanner;
 import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
-import com.sun.org.apache.xerces.internal.impl.dv.util.Base64;
 import java.io.ByteArrayInputStream;
-import sun.misc.BASE64Decoder;
+import java.util.Base64;
 import java.util.Arrays;
 
 public class Img {
@@ -16,7 +14,8 @@ public class Img {
             BufferedImage sourceimage = ImageIO.read(new File(imgName));
             ByteArrayOutputStream bytes = new ByteArrayOutputStream();
             ImageIO.write(sourceimage, "png", bytes);
-            resultantimage = Base64.encode(bytes.toByteArray());
+
+            resultantimage = Base64.getEncoder().encodeToString(bytes.toByteArray());;
           } catch (Exception e) {
             e.printStackTrace();
           }
@@ -28,8 +27,8 @@ public class Img {
           //read Flie
           String base64 = FindPrime.readFile(base64String);
       try {
-          BASE64Decoder decoder = new BASE64Decoder();
-          byte[] decodedBytes = decoder.decodeBuffer(base64);
+          
+          byte[] decodedBytes = Base64.getDecoder().decode(base64);
           System.out.println(Arrays.toString(decodedBytes));
           
           BufferedImage image = ImageIO.read(new ByteArrayInputStream(decodedBytes));
